[DDW-582] Fix overlap issues

--- a/source/renderer/app/components/wallet/settings-general/WalletGeneralSettings.scss
+++ b/source/renderer/app/components/wallet/settings-general/WalletGeneralSettings.scss
@@ -16,6 +16,9 @@
       white-space: nowrap;
       overflow: hidden;
     }
+    .SimpleFormField_error {
+      margin-right: 52px;
+    }
   }
 }
 
