--- a/source/renderer/app/components/widgets/forms/InlineEditingDropdown.scss
+++ b/source/renderer/app/components/widgets/forms/InlineEditingDropdown.scss
@@ -17,7 +17,7 @@
   .questionMarkIcon {
     height: 14px;
     width: 14px;
-    margin-left: 6px;
+    margin-left: 4px;
     transform: translateY(2px);
     path {
       fill: var(--theme-input-icon-background-color);
@@ -29,7 +29,7 @@
     color: var(--theme-input-right-floating-text-color);
     font-family: var(--font-light);
     font-size: 14px;
-    letter-spacing: -0.3px;
+    letter-spacing: -0.5px;
     opacity: 0;
     position: absolute;
     right: 0;
